src/test/ui/error-codes/E0004-2.stderr
error[E0004]: non-exhaustive patterns: `None` and `Some(_)` not covered
  --> $DIR/E0004-2.rs:4:11
   |
LL |     match x { }
   |           ^ patterns `None` and `Some(_)` not covered
   |
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
LL | |     None,
   | |     ^^^^ not covered
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   | |     ^^^^ not covered
LL | | }
   | |_-
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~     match x {
LL +         None | Some(_) => todo!(),
LL ~     }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
